Fix mount of mse-bootstrap in Guest OS

--- a/python.manifest.template
+++ b/python.manifest.template
@@ -22,7 +22,7 @@ fs.mounts = [
   { path = "{{ arch_libdir }}", uri = "file:{{ arch_libdir }}" },
   { path = "{{ entrypoint }}", uri = "file:{{ entrypoint }}" },
   { path = "{{ python.stdlib }}", uri = "file:{{ python.stdlib }}" },
-  { path = "/usr/local/bin/mse-bootstrap", uri = "file:/usr/local/bin/mse-bootstrap" },
+  { path = "/usr/local/bin/mse-bootstrap", uri = "file:{{ env.get('VENV', '/usr/local') }}/bin/mse-bootstrap" },
   { path = "/usr/local/lib/python3.8", uri = "file:{{ env.get('VENV', '/usr/local') }}/lib/python3.8" },
   { path = "/tmp", type = "tmpfs" },
   { path = "/tmp/app", uri = "file:{{ app_dir }}/" },
@@ -58,7 +58,7 @@ sgx.trusted_files = [
   "file:/usr/share/dpkg/tupletable",
   "file:/usr/lib/ssl/openssl.cnf",
   "file:/usr/share/zoneinfo/UTC",
-  "file:/usr/local/bin/mse-bootstrap",
+  "file:{{ env.get('VENV', '/usr/local') }}/bin/mse-bootstrap",
   "file:args",
   "file:{{ app_dir }}/",
 ]
