--- a/python.manifest.template
+++ b/python.manifest.template
@@ -2,6 +2,7 @@ loader.entrypoint = "file:{{ gramine.libos }}"
 libos.entrypoint = "{{ entrypoint }}"
 loader.log_level = "{{ log_level }}"
 
+loader.env.PATH = "/usr/local/bin"
 loader.env.LD_LIBRARY_PATH = "/lib:/usr/lib:{{ arch_libdir }}:/usr/{{ arch_libdir }}"
 loader.env.PYTHONPATH = "/usr/local/lib/python3.8/site-packages"
 loader.env.PYTHONDONTWRITEBYTECODE = "1"
