--- a/python.manifest.template
+++ b/python.manifest.template
@@ -22,8 +22,8 @@ fs.mounts = [
   { path = "{{ arch_libdir }}", uri = "file:{{ arch_libdir }}" },
   { path = "{{ entrypoint }}", uri = "file:{{ entrypoint }}" },
   { path = "{{ python.stdlib }}", uri = "file:{{ python.stdlib }}" },
-  { path = "/usr/local/bin/mse-bootstrap", uri = "file:{{ env.get('VENV', '/usr/local') }}/bin/mse-bootstrap" },
-  { path = "/usr/local/lib/python3.8", uri = "file:{{ env.get('VENV', '/usr/local') }}/lib/python3.8" },
+  { path = "/usr/local/bin/mse-bootstrap", uri = "file:{{ env.get('GRAMINE_VENV', '/usr/local') }}/bin/mse-bootstrap" },
+  { path = "/usr/local/lib/python3.8", uri = "file:{{ env.get('GRAMINE_VENV', '/usr/local') }}/lib/python3.8" },
   { path = "/tmp", type = "tmpfs" },
   { path = "/tmp/app", uri = "file:{{ app_dir }}/" },
   { path = "/root", uri = "file:{{ home_dir }}/", type = "encrypted",  key_name = "_sgx_mrenclave" },
@@ -45,7 +45,7 @@ sgx.trusted_files = [
   "file:{{ arch_libdir }}/",
   "file:/usr/{{ arch_libdir }}/",
   "file:{{ python.stdlib }}/",
-  "file:{{ env.get('VENV', '/usr/local') }}/lib/python3.8/",
+  "file:{{ env.get('GRAMINE_VENV', '/usr/local') }}/lib/python3.8/",
   "file:/etc/apt/apt.conf.d/",
   "file:/etc/nsswitch.conf",
   "file:/etc/group",
@@ -58,7 +58,7 @@ sgx.trusted_files = [
   "file:/usr/share/dpkg/tupletable",
   "file:/usr/lib/ssl/openssl.cnf",
   "file:/usr/share/zoneinfo/UTC",
-  "file:{{ env.get('VENV', '/usr/local') }}/bin/mse-bootstrap",
+  "file:{{ env.get('GRAMINE_VENV', '/usr/local') }}/bin/mse-bootstrap",
   "file:args",
   "file:{{ app_dir }}/",
 ]
