allow `insecure__allow_eventfd` for tokio async

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,7 @@ jobs:
       packages: write
       contents: read
     env:
-      IMAGE: ghcr.io/cosmian/mse-base
+      IMAGE: ghcr.io/cosmian/mse-kms-client
 
     steps:
       - name: Build date
