--- a/python.manifest.template
+++ b/python.manifest.template
@@ -18,6 +18,8 @@ loader.argv_src_file = "file:args"
 
 sys.enable_extra_runtime_domain_names_conf = true
 sys.disallow_subprocesses = true
+# Required for tokio async
+sys.insecure__allow_eventfd = true
 
 fs.mounts = [
   { path = "/lib", uri = "file:{{ gramine.runtimedir() }}" },
